; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_ar9003_mac.c_ath9k_hw_addrxbuf_edma.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_ar9003_mac.c_ath9k_hw_addrxbuf_edma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hw = type { i32 }

@ATH9K_RX_QUEUE_HP = common dso_local global i32 0, align 4
@AR_HP_RXDP = common dso_local global i32 0, align 4
@AR_LP_RXDP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ath9k_hw_addrxbuf_edma(%struct.ath_hw* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ath_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ath_hw* %0, %struct.ath_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @ATH9K_RX_QUEUE_HP, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load %struct.ath_hw*, %struct.ath_hw** %4, align 8
  %12 = load i32, i32* @AR_HP_RXDP, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @REG_WRITE(%struct.ath_hw* %11, i32 %12, i32 %13)
  br label %20

15:                                               ; preds = %3
  %16 = load %struct.ath_hw*, %struct.ath_hw** %4, align 8
  %17 = load i32, i32* @AR_LP_RXDP, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @REG_WRITE(%struct.ath_hw* %16, i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %15, %10
  ret void
}

declare dso_local i32 @REG_WRITE(%struct.ath_hw*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
